# go-outside-bot

./: LICENSE  README.md  project-planning.md  pyproject.toml
go_outside/: __main__.py  bot.py  settings.py
go_outside/cogs/: admin.py  general.py  leveling.py
go_outside/utils/: db.py  emojis.py  format.py
